manifest/envoy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: envoy-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: envoy
  template:
    metadata:
      labels:
        app: envoy
    spec:
      containers:
        - name: envoy
          image: akashbalani/recipeenvoy:latest
          ports:
            - containerPort: 8080
