manifest/logstash-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logstash-deployment
  annotations:
    sidecar.istio.io/inject: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logstash
  template:
    metadata:
      labels:
        app: logstash
    spec:
      containers:
        - name: logstash
          image: docker.elastic.co/logstash/logstash:7.17.17
          ports:
            - containerPort: 5044
          resources:
            limits:
              cpu: "1"
              memory: "2Gi"
            requests:
              cpu: "0.5"
              memory: "1Gi"
