manifest/promtail-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: promtail-deployment
  namespace: prometheus-stack
spec:
  replicas: 1
  selector:
    matchLabels:
      app: promtail
  template:
    metadata:
      labels:
        app: promtail
    spec:
      containers:
        - name: promtail
          image: grafana/promtail:latest
          args:
            - -config.file=/etc/promtail/promtail-config.yaml
            - -client.external-labels=job=varlogs
            - -client.external-labels=app=promtail
          volumeMounts:
            - name: promtail-config
              mountPath: /etc/promtail
              readOnly: true
      volumes:
        - name: promtail-config
          configMap:
            name: promtail-config
