manifest/splunk-deployment.yaml
# DISCLAIMER: DOES NOT WORK ON MACOS M1 CHIP
apiVersion: apps/v1
kind: Deployment
metadata:
  name: splunk
spec:
  replicas: 1
  selector:
    matchLabels:
      app: splunk
  template:
    metadata:
      labels:
        app: splunk
    spec:
      containers:
        - name: splunk
          image: splunk/splunk:latest
          ports:
            - containerPort: 8099
            - containerPort: 8088
