manifest/django-deployment.yaml
# django-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django
  template:
    metadata:
      labels:
        app: django
    spec:
      containers:
        - name: django-container
          image: akashbalani/recipe:latest
          ports:
            - containerPort: 8000
        - name: envoy-sidecar
          image: akashbalani/recipeenvoy:latest
          command:
            - envoy
            - "--config-path"
            - "/etc/envoy/envoy.yaml"
      volumes:
        - name: init-script-volume
          persistentVolumeClaim:
            claimName: init-script-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: django-service
spec:
  selector:
    app: django
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
      nodePort: 30000
  type: NodePort
