manifest/envoy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: envoy-service
spec:
  selector:
    app: envoy
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8080
  type: LoadBalancer
