manifest/falco-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: falco-service
spec:
  selector:
    app: falco
  ports:
    - protocol: TCP
      port: 5060
      targetPort: 5060
  type: ClusterIP
