manifest/grafana-deployment.yaml
# grafana-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana-deployment
  namespace: prometheus-stack
  annotations:
    sidecar.istio.io/inject: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
        - name: grafana
          image: grafana/grafana:7.5.11
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: grafana-service
  namespace: prometheus-stack
spec:
  selector:
    app: grafana
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
