manifest/kibana-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kibana
  annotations:
    sidecar.istio.io/inject: "true"
spec:
  selector:
    app: kibana
  ports:
    - name: http
      protocol: TCP
      port: 5601
      targetPort: 5601
  type: LoadBalancer
