manifest/splunk-service.yaml
# DISCLAIMER: DOES NOT WORK ON MACOS M1 CHIP
apiVersion: v1
kind: Service
metadata:
  name: splunk
spec:
  selector:
    app: splunk
  ports:
    - name: splunk-web
      protocol: TCP
      port: 8099
      targetPort: 8099
    - name: splunk-api
      protocol: TCP
      port: 8088
      targetPort: 8088
  type: LoadBalancer
