manifest/istio-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: my-virtualservice
spec:
  hosts:
    - "*"
  gateways:
    - istio-system/my-gateway
  http:
    - match:
        - uri:
            prefix: /django
      route:
        - destination:
            host: django-service.default.svc.cluster.local
            port:
              number: 8000
    - match:
        - uri:
            prefix: /angular
      route:
        - destination:
            host: angular-service.default.svc.cluster.local
            port:
              number: 4200
    - match:
        - uri:
            prefix: /elasticsearch
      route:
        - destination:
            host: elasticsearch.elastic-stack.svc.cluster.local
            port:
              number: 9200
    - match:
        - uri:
            prefix: /kibana
      route:
        - destination:
            host: kibana.elastic-stack.svc.cluster.local
            port:
              number: 5601
